--- a/main.tex
+++ b/main.tex
@@ -164,7 +164,7 @@ The images of such morphisms under $\mathcal{P}$ are squares
 \end{equation}
 in $\mathrm{Lcc}$.
 For $(p, \mathcal{P})$ to be a comprehension category, they would have to be pushout squares, but in fact they are bipushout squares:
-They satisfy they universal property of pushouts up to unique isomorphism, but not up to equality.
+They satisfy the universal property of pushouts up to unique isomorphism, but not up to equality.
 If $f$ does not preserve pullback squares up to strict equality, then the square \eqref{eq:homotopy-pushout-comprehension} commutes only up to isomorphism, not equality.
 Thus $\mathcal{P}$ is not even a functor but a bifunctor.
 
