Correct grammar in def of Grothendieck fibration

--- a/main.tex
+++ b/main.tex
@@ -150,7 +150,7 @@ The corresponding comprehension category should thus consist of a Grothendieck f
 \end{equation}
 commutes and $\mathcal{P}(f)$ is a pullback square for each cartesian morphism $f$ in $\mathcal{E}$.
 The data of a Grothendieck fibration $p$ as above is equivalent to a (covariant) functor $\mathrm{Lcc} \rightarrow \mathrm{Cat}$ via the Grothendieck construction, and here we simply take the forgetful functor.
-Thus the objects of $\mathcal{E}$ are pairs $(\Gamma, \tau)$ such that $\Gamma$ is an lcc category and $\tau \in \operatorname{Ob} \Gamma$, and a morphism $(\Gamma, \tau) \rightarrow (\Delta, \sigma)$ in $\mathcal{E}$ is pair $(f, k)$ of lcc functor $f : \Delta \rightarrow \Gamma$ and a morphism $k : \tau \rightarrow f(\sigma)$ in $\Gamma$.
+Thus the objects of $\mathcal{E}$ are pairs $(\Gamma, \tau)$ such that $\Gamma$ is an lcc category and $\tau \in \operatorname{Ob} \Gamma$, and a morphism $(\Gamma, \tau) \rightarrow (\Delta, \sigma)$ in $\mathcal{E}$ is a pair $(f, k)$ of lcc functor $f : \Delta \rightarrow \Gamma$ and morphism $k : \tau \rightarrow f(\sigma)$ in $\Gamma$.
 
 The functor $\mathcal{P}$ should assign to objects $(\Gamma, \tau)$ of $\mathcal{E}$ the projection of the corresponding context extension, hence we define $\mathcal{P}(\Gamma, \tau) = \tau^* : \Gamma \rightarrow \Gamma_{/ \tau}$ as the pullback functor to the slice category.
 The cartesian morphisms of $\mathcal{E}$ are those with invertible vertical components $k$, so they are given up to isomorphism by pairs $(f, \mathrm{id}) : (\Gamma, f(\sigma)) \rightarrow (\Delta, \sigma)$.
