Add 'of the form'

--- a/main.tex
+++ b/main.tex
@@ -153,7 +153,7 @@ The data of a Grothendieck fibration $p$ as above is equivalent to a (covariant)
 Thus the objects of $\mathcal{E}$ are pairs $(\Gamma, \tau)$ such that $\Gamma$ is an lcc category and $\tau \in \operatorname{Ob} \Gamma$, and a morphism $(\Gamma, \tau) \rightarrow (\Delta, \sigma)$ in $\mathcal{E}$ is a pair $(f, k)$ of lcc functor $f : \Delta \rightarrow \Gamma$ and morphism $k : \tau \rightarrow f(\sigma)$ in $\Gamma$.
 
 The functor $\mathcal{P}$ should assign to objects $(\Gamma, \tau)$ of $\mathcal{E}$ the projection of the corresponding context extension, hence we define $\mathcal{P}(\Gamma, \tau) = \tau^* : \Gamma \rightarrow \Gamma_{/ \tau}$ as the pullback functor to the slice category.
-The cartesian morphisms of $\mathcal{E}$ are those with invertible vertical components $k$, so they are given up to isomorphism by pairs $(f, \mathrm{id}) : (\Gamma, f(\sigma)) \rightarrow (\Delta, \sigma)$.
+The cartesian morphisms of $\mathcal{E}$ are those with invertible vertical components $k$, so they are given up to isomorphism by pairs of the form $(f, \mathrm{id}) : (\Gamma, f(\sigma)) \rightarrow (\Delta, \sigma)$.
 The images of such morphisms under $\mathcal{P}$ are squares
 \begin{equation}
   \label{eq:homotopy-pushout-comprehension}
